Solved wrap

--- a/XPhone/css/index.css
+++ b/XPhone/css/index.css
@@ -1,6 +1,8 @@
 body{
     background-color: #bbbbbb;
 	font-family:"Microsoft YaHei";
+	width: 100%;
+	height: 100%;
   	overflow:hidden;
 	font-size: 4vw;
 }
@@ -11,6 +13,7 @@ body{
   height: 100%;
   background-size: cover; 
   z-index: 1;
+  overflow:hidden;
 }
 
 .button{
